...
      ],
    );
  }

  Color _getKategoriColor(String kategori) {
    switch (kategori.toLowerCase()) {
      case 'iuran bulanan':
        return Colors.green;
      case 'donasi':
        return Colors.blue;
      case 'kegiatan warga':
        return Colors.purple;
      case 'eksternal':
...
