...
                        child: Row(
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: [
                            const Icon(Icons.logout_rounded, color: primaryColor),
                            const SizedBox(width: 8),
                            Text(
                              'Keluar',
                              style: GoogleFonts.inter(
                                fontSize: 15,
                                fontWeight: FontWeight.w600,
                                color: primaryColor,
                              ),
                            ),
...
                            color: Colors.black87,
                          ),
                        ),
                        TextButton(
                          onPressed: () => context.goNamed('daftar-tagihan-warga'),
                          child: Text(
                            'Lihat Semua',
                            style: GoogleFonts.inter(
                              fontSize: 14,
                              fontWeight: FontWeight.w600,
                              color: primaryColor,
                            ),
                          ),
...
