...
  @override
  Widget build(BuildContext context) {
    return DefaultTabController(
      length: 2,
      child: Scaffold(
        appBar: AppBar(
          title: const Text('Laporan Keuangan'),
          bottom: const TabBar(
            tabs: [
              Tab(text: "Semua Pemasukan"),
              Tab(text: "Semua Pengeluaran"),
            ],
          ),
...
