...
  String? _selectedCategoryFilter;

  final List<String> _kategoriOptions = [
    'Komunitas & Sosial',
    'Kebersihan & Keamanan',
    'Keagamaan',
    'Pendidikan',
    'Kesehatan & Olahraga',
  ];

  @override
  void initState() {
    super.initState();
...
