appId: com.example.jawara
---

# ============================================================
# LAUNCH APP
# # ============================================================

# ============================================================
# LOGIN (STABIL DI SEMUA DEVICE)
# ============================================================

- assertVisible: "Masuk"
- tapOn:
    text: "Masuk"
- extendedWaitUntil:
    visible:
      text: "Masukkan Email"
    timeout: 5000
- tapOn: 
    text: "Masukkan Email"
    optional: true
- eraseText
- inputText: "dawoaw1212@gmail.com"
- hideKeyboard
- tapOn:
    text: "Masukkan Kata Sandi" 
    optional: true
- eraseText
- inputText: "123123"
- hideKeyboard

- tapOn: "Masuk"


# Pastikan login sukses
- extendedWaitUntil:
    visible:
      text: "Beranda"
    timeout: 10000

- assertNotVisible:
    text: "Login berhasil"

# ============================================================
# NAVIGASI KE KEUANGAN
# ============================================================

# Pastikan navbar tampil
- assertVisible:
    text: "Beranda"

- tapOn:
    point: "50%,89%"
- waitForAnimationToEnd

- assertVisible:
    text: "Keuangan"

# ============================================================
# NAVIGASI KE TAGIHAN
# ============================================================

- tapOn: "Tagihan"
- waitForAnimationToEnd

- tapOn:
    point: "89%,17%"
- waitForAnimationToEnd

- tapOn: "Belum Bayar"
- waitForAnimationToEnd

- tapOn: "Terapkan"
- waitForAnimationToEnd